bdr.BDR.scala.error
Compilation error:
BDR:22: error: ')' expected but 'if' found.
    if(mess == "C"){
    ^BDR:26: error: ';' expected but 'if' found.
    if(mess == "Z") recule;
    ^BDR:32: error: ';' expected but 'if' found.
    if(mess == "X") {
    ^